# program-changer

./: .cursorrules  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  project-configuration.cmake
CMake/: CopyVst3Elevated.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginFactory.cpp  PluginProcessor.cpp  PluginProcessor.h
